# core2_flex_font

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig.m5stack-core2-esp-idf  sdkconfig.m5stack-core2-esp-idf.old
include/: flex_font.hpp  stb_truetype.h
include/assets/: NotoSansBold15.hpp  telegrama.hpp  vga_8x8.hpp  vga_9x14.hpp
lib/htcw_bits/: .piopm  CMakeLists.txt  library.json
lib/htcw_bits/include/: htcw_bits.hpp  htcw_endian.hpp
lib/htcw_bits/zephyr/: CMakeLists.txt  Kconfig  module.yml
lib/htcw_data/: .piopm  CMakeLists.txt  README.md  library.json
lib/htcw_data/examples/demo/: platformio.ini
lib/htcw_data/examples/demo/src/: main.cpp
lib/htcw_data/include/: htcw_data.hpp
lib/htcw_data/zephyr/: CMakeLists.txt  Kconfig  module.yml
lib/htcw_gfx/include/: gfx_core.hpp  gfx_drawing.hpp  gfx_encoding.hpp
lib/htcw_gfx/src/: gfx_encoding.cpp  gfx_svg_builder.cpp  gfx_svg_common.cpp  gfx_svg_parser.cpp  gfx_svg_rasterizer.cpp  svg_private.hpp
lib/htcw_io/: .piopm  CMakeLists.txt  README.md  fetch_deps.cmd  library.json
lib/htcw_io/include/: io_lex_source.hpp  io_stream.hpp
lib/htcw_io/src/: io_stream.cpp
lib/htcw_io/zephyr/: CMakeLists.txt  Kconfig  module.yml
lib/htcw_ml/: .piopm  CMakeLists.txt  README.md  fetch_deps.cmd  library.json
lib/htcw_ml/examples/demo/: platformio.ini
lib/htcw_ml/examples/demo/src/: main.cpp
lib/htcw_ml/include/: ml_reader.hpp  ml_reader_fa.hpp
lib/htcw_ml/src/: ml_reader_fa.cpp
lib/htcw_ml/zephyr/: CMakeLists.txt  Kconfig  module.yml
lib/htcw_uix/include/: uix_svg_button.hpp  uix_svg_clock.hpp  uix_svg_slider.hpp  uix_svg_switch.hpp
src/: flex_font.cpp  flex_font_tt.cpp  flex_font_vlw.cpp  flex_font_win.cpp  main.cpp
